...
                android:layout_weight="1"
                android:text="Study Sessions"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_female_1" />

        </LinearLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:singleSelection="true">

            <Button
                android:id="@+id/findButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Find" />

            <Button
                android:id="@+id/joinedButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Joined" />

            <Button
                android:id="@+id/hostedButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hosted" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
...
            android:padding="16dp"
            android:text="No sessions found"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sessionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fetchSessionsButton"
...
