...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/joinButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="Join Session"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/leaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="Leave Session"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Session"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="8dp" />
...
